src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__trait_impl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: None,
                trait_ty: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 1,
                                            },
                                            span: Span {
                                                start: 6,
                                                end: 15,
                                                start_line: 2,
                                                start_col: 6,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 6,
                                    end: 15,
                                    start_line: 2,
                                    start_col: 6,
                                },
                            },
                        ),
                        span: Span {
                            start: 6,
                            end: 15,
                            start_line: 2,
                            start_col: 6,
                        },
                    },
                ),
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 20,
                                            end: 25,
                                            start_line: 2,
                                            start_col: 20,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 20,
                                end: 25,
                                start_line: 2,
                                start_col: 20,
                            },
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 25,
                        start_line: 2,
                        start_col: 20,
                    },
                },
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 3,
                                },
                                span: Span {
                                    start: 35,
                                    end: 40,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 5,
                                                },
                                                span: Span {
                                                    start: 42,
                                                    end: 46,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 42,
                                            end: 46,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                    ty: Type {
                                        kind: Reference {
                                            lifetime: None,
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 42,
                                                                        end: 46,
                                                                        start_line: 3,
                                                                        start_col: 15,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 42,
                                                            end: 46,
                                                            start_line: 3,
                                                            start_col: 15,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 42,
                                                    end: 46,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 41,
                                            end: 46,
                                            start_line: 3,
                                            start_col: 14,
                                        },
                                    },
                                    span: Span {
                                        start: 41,
                                        end: 46,
                                        start_line: 3,
                                        start_col: 14,
                                    },
                                },
                            ],
                            return_type: None,
                            effects: None,
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [
                                        Expr {
                                            expr: Expr {
                                                kind: Call {
                                                    callee: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 6,
                                                                            },
                                                                            span: Span {
                                                                                start: 58,
                                                                                end: 65,
                                                                                start_line: 4,
                                                                                start_col: 9,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 58,
                                                                    end: 65,
                                                                    start_line: 4,
                                                                    start_col: 9,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 58,
                                                            end: 65,
                                                            start_line: 4,
                                                            start_col: 9,
                                                        },
                                                    },
                                                    args: [
                                                        CallArg {
                                                            name: None,
                                                            value: Expr {
                                                                kind: Field {
                                                                    base: Expr {
                                                                        kind: Path(
                                                                            ExprPath {
                                                                                segments: [
                                                                                    ExprPathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 5,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 66,
                                                                                                end: 70,
                                                                                                start_line: 4,
                                                                                                start_col: 17,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                ],
                                                                                span: Span {
                                                                                    start: 66,
                                                                                    end: 70,
                                                                                    start_line: 4,
                                                                                    start_col: 17,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 66,
                                                                            end: 70,
                                                                            start_line: 4,
                                                                            start_col: 17,
                                                                        },
                                                                    },
                                                                    field: Named(
                                                                        Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 7,
                                                                            },
                                                                            span: Span {
                                                                                start: 71,
                                                                                end: 72,
                                                                                start_line: 4,
                                                                                start_col: 22,
                                                                            },
                                                                        },
                                                                    ),
                                                                },
                                                                span: Span {
                                                                    start: 66,
                                                                    end: 72,
                                                                    start_line: 4,
                                                                    start_col: 17,
                                                                },
                                                            },
                                                            span: Span {
                                                                start: 66,
                                                                end: 72,
                                                                start_line: 4,
                                                                start_col: 17,
                                                            },
                                                        },
                                                    ],
                                                },
                                                span: Span {
                                                    start: 58,
                                                    end: 73,
                                                    start_line: 4,
                                                    start_col: 9,
                                                },
                                            },
                                            has_semi: true,
                                        },
                                    ],
                                    expr: None,
                                    span: Span {
                                        start: 48,
                                        end: 80,
                                        start_line: 3,
                                        start_col: 21,
                                    },
                                },
                            ),
                            span: Span {
                                start: 32,
                                end: 80,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 82,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 82,
        start_line: 2,
        start_col: 1,
    },
}
