src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__trait_with_default.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Trait(
            TraitDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 12,
                        start_line: 2,
                        start_col: 7,
                    },
                },
                type_params: None,
                supertraits: [],
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_fiber: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 22,
                                    end: 27,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 29,
                                                    end: 33,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 29,
                                            end: 33,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                    ty: Type {
                                        kind: Reference {
                                            lifetime: None,
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 29,
                                                                        end: 33,
                                                                        start_line: 3,
                                                                        start_col: 15,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 29,
                                                            end: 33,
                                                            start_line: 3,
                                                            start_col: 15,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 29,
                                                    end: 33,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 28,
                                            end: 33,
                                            start_line: 3,
                                            start_col: 14,
                                        },
                                    },
                                    span: Span {
                                        start: 28,
                                        end: 33,
                                        start_line: 3,
                                        start_col: 14,
                                    },
                                },
                            ],
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 38,
                                                            end: 44,
                                                            start_line: 3,
                                                            start_col: 24,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 38,
                                                end: 44,
                                                start_line: 3,
                                                start_col: 24,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 38,
                                        end: 44,
                                        start_line: 3,
                                        start_col: 24,
                                    },
                                },
                            ),
                            effects: None,
                            spec_clauses: [],
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [],
                                    expr: Some(
                                        Expr {
                                            kind: MethodCall {
                                                receiver: Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: String(
                                                                "Debug",
                                                            ),
                                                            span: Span {
                                                                start: 55,
                                                                end: 62,
                                                                start_line: 4,
                                                                start_col: 9,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 55,
                                                        end: 62,
                                                        start_line: 4,
                                                        start_col: 9,
                                                    },
                                                },
                                                method: Spanned {
                                                    node: SymbolU32 {
                                                        value: 6,
                                                    },
                                                    span: Span {
                                                        start: 63,
                                                        end: 72,
                                                        start_line: 4,
                                                        start_col: 17,
                                                    },
                                                },
                                                type_args: None,
                                                args: [],
                                            },
                                            span: Span {
                                                start: 55,
                                                end: 74,
                                                start_line: 4,
                                                start_col: 9,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 45,
                                        end: 80,
                                        start_line: 3,
                                        start_col: 31,
                                    },
                                },
                            ),
                            span: Span {
                                start: 19,
                                end: 80,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 82,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 82,
        start_line: 2,
        start_col: 1,
    },
}
